demo_compiler/2018fall/Compiler/lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error SEMI
   35     | WHILE LP error RP Stmt
   36     | RETURN error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | ID LP error RP
   64    | Exp LB error RB

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 34 35 36 40 63 64
INT (258) 19 61
FLOAT (259) 62
ID (260) 15 17 18 20 21 56 57 59 60 63
SEMI (261) 4 5 7 8 28 30 34 36 39 40
COMMA (262) 10 22 42 65
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
NOT (271) 55
DOT (272) 59
TYPE (273) 11
LP (274) 20 21 31 32 33 35 53 56 57 63
RP (275) 20 21 31 32 33 35 53 56 57 63
LB (276) 19 58 64
RB (277) 19 58 64
LC (278) 13 25
RC (279) 13 25
STRUCT (280) 13 14
RETURN (281) 30 36
IF (282) 31 32
ELSE (283) 32
WHILE (284) 33 35
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 24 39 40
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 24 43 44
FunDec (41)
    on left: 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 20 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25, on right: 6 29
StmtList (45)
    on left: 26 27, on right: 25 26
Stmt (46)
    on left: 28 29 30 31 32 33 34 35 36, on right: 26 31 32 33 35
DefList (47)
    on left: 37 38, on right: 13 25 37
Def (48)
    on left: 39 40, on right: 37
DecList (49)
    on left: 41 42, on right: 39 42
Dec (50)
    on left: 43 44, on right: 41 42
Exp (51)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64, on right: 28 30 31 32 33 44 45 46 47 48 49 50 51 52 53 54
    55 58 59 64 65 66
Args (52)
    on left: 65 66, on right: 56 65


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    7 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 22


State 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 22

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 27

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   39 Def: Specifier . DecList SEMI
   40    | Specifier . error SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 36

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


State 31

   37 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 31


State 32

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 33

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 46


State 34

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 35

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 23 (VarList)


State 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 37

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 38

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


State 39

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 27
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 40

   40 Def: Specifier error . SEMI

    SEMI  shift, and go to state 64


State 41

   19 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 42

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 43

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 41 (DecList)


State 44

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 45

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 46

   19 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 24 (ParamDec)


State 47

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 48

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 68
    ParamDec         go to state 35


State 49

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 50

   34 Stmt: error . SEMI

    SEMI  shift, and go to state 69


State 51

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 52

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 53

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .
   63    | ID . LP error RP

    LP  shift, and go to state 70

    $default  reduce using rule 60 (Exp)


State 54

   54 Exp: MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 71


State 55

   55 Exp: NOT . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 72


State 56

   53 Exp: LP . Exp RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 73


State 57

   30 Stmt: RETURN . Exp SEMI
   36     | RETURN . error SEMI

    error  shift, and go to state 74
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 75


State 58

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 76


State 59

   33 Stmt: WHILE . LP Exp RP Stmt
   35     | WHILE . LP error RP Stmt

    LP  shift, and go to state 77


State 60

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 61

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 62

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 27
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 79
    Stmt      go to state 62
    Exp       go to state 63


State 63

   28 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 64

   40 Def: Specifier error SEMI .

    $default  reduce using rule 40 (Def)


State 65

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 91


State 66

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 67

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 41
    DecList  go to state 92
    Dec      go to state 43


State 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 69

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 70

   56 Exp: ID LP . Args RP
   57    | ID LP . RP
   63    | ID LP . error RP

    error  shift, and go to state 93
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


State 71

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 54 (Exp)


State 72

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 55 (Exp)


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 97
    LB        shift, and go to state 90


State 74

   36 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 98


State 75

   30 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 76

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 100


State 77

   33 Stmt: WHILE LP . Exp RP Stmt
   35     | WHILE LP . error RP Stmt

    error  shift, and go to state 101
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 102


State 78

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 79

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


State 80

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 81

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 103


State 82

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 104


State 83

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 105


State 84

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 106


State 85

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 107


State 86

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 108


State 87

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 109


State 88

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 110


State 89

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 111


State 90

   58 Exp: Exp LB . Exp RB
   64    | Exp LB . error RB

    error  shift, and go to state 112
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 113


State 91

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 44 (Dec)


State 92

   42 DecList: Dec COMMA DecList .

    $default  reduce using rule 42 (DecList)


State 93

   63 Exp: ID LP error . RP

    RP  shift, and go to state 114


State 94

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 95

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB
   65 Args: Exp . COMMA Args
   66     | Exp .

    COMMA     shift, and go to state 115
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 66 (Args)


State 96

   56 Exp: ID LP Args . RP

    RP  shift, and go to state 116


State 97

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 98

   36 Stmt: RETURN error SEMI .

    $default  reduce using rule 36 (Stmt)


State 99

   30 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 100

   31 Stmt: IF LP Exp . RP Stmt
   32     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 117
    LB        shift, and go to state 90


State 101

   35 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 118


State 102

   33 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 119
    LB        shift, and go to state 90


State 103

   45 Exp: Exp . ASSIGNOP Exp
   45    | Exp ASSIGNOP Exp .
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 45 (Exp)


State 104

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   48    | Exp RELOP Exp .
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 48 (Exp)


State 105

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   49    | Exp PLUS Exp .
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 49 (Exp)


State 106

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   50    | Exp MINUS Exp .
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 50 (Exp)


State 107

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   51    | Exp STAR Exp .
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 51 (Exp)


State 108

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   52    | Exp DIV Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 52 (Exp)


State 109

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   46    | Exp AND Exp .
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    RELOP  shift, and go to state 82
    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 46 (Exp)


State 110

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   47    | Exp OR Exp .
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   64    | Exp . LB error RB

    RELOP  shift, and go to state 82
    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    AND    shift, and go to state 87
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 47 (Exp)


State 111

   59 Exp: Exp DOT ID .

    $default  reduce using rule 59 (Exp)


State 112

   64 Exp: Exp LB error . RB

    RB  shift, and go to state 120


State 113
